comments are added

--- a/cart.css
+++ b/cart.css
@@ -1,3 +1,5 @@
+
+/* creating another css file which will be connected to cart page to do not disturb the other cards froms other pages. */
 i{color: black; margin: 10px;}
 .navbar-toggler{
   margin-left: 0%;
